--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,51 @@
     justify-content: space-between;
     align-items: center;
     padding-block: 2rem;
+    @media (max-width: 1024px) {
+      padding-block: 1rem;
+      width: 96%;
+    }
+    .header__menu-btn {
+      width: 60px;
+      height: 60px;
+      background: white;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 6px;
+      padding: 15px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
+      position: relative;
+      z-index: 10000;
+      @media (min-width: 1025px) {
+        display: none;
+      }
+      .header__menu-line {
+        width: 30px;
+        height: 3px;
+        background: #363c45;
+        border-radius: 3px;
+        transition: all 0.3s ease;
+      }
+
+      &.active .header__menu-line:nth-child(1) {
+        transform: translateY(9px) rotate(45deg);
+      }
+
+      &.active .header__menu-line:nth-child(2) {
+        opacity: 0;
+        transform: translateX(-20px);
+      }
+
+      &.active .header__menu-line:nth-child(3) {
+        transform: translateY(-9px) rotate(-45deg);
+      }
+    }
     .header__logo-link {
       text-decoration: none;
       color: #363c45;
@@ -19,8 +64,47 @@
       display: flex;
       align-items: center;
       gap: 1rem;
+      @media (max-width: 1024px) {
+        font-size: 1rem;
+        gap: 0.5rem;
+      }
       .header__logo-img {
         width: 100px;
+        @media (max-width: 1024px) {
+          width: 50px;
+        }
+      }
+    }
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease;
+      z-index: 998;
+      &.active {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+    .header__nav {
+      @media (max-width: 1024px) {
+        position: fixed;
+        top: 0;
+        right: -180px;
+        height: 100vh;
+        background: #fff;
+        transition: right 0.3s ease;
+        z-index: 9999;
+        padding-block: 10rem;
+        width: 160px;
+      }
+            &.active {
+        right: 0;
       }
     }
     .nav-list {
@@ -30,11 +114,21 @@
       align-items: center;
       text-decoration: none;
       font-size: 1.2rem;
+      @media (max-width: 1024px) {
+        flex-direction: column;
+      }
+
       a {
         display: flex;
         align-items: center;
         img {
           width: 25px;
+        }
+      }
+      .nav-list__item {
+        cursor: pointer;
+        @media (max-width: 1024px) {
+          font-size: 1rem;
         }
       }
       .nav-list__item a {
