googlefontの読み込み

--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   color: #333;
-  font-family: "Noto Sans JP", "Hiragino Sans", "Hiragino Kaku Gothic ProN",
+  font-family: "M PLUS Rounded 1c","Noto Sans JP", "Hiragino Sans", "Hiragino Kaku Gothic ProN",
     -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Arial,
     sans-serif;
 }
