--- a/css/top-page.css
+++ b/css/top-page.css
@@ -273,16 +273,34 @@
 
 .voice {
   background-color: #f0f2f5;
-  padding-block: 1rem;
+  padding-block: 5rem;
   h2{
     font-size: 3rem;
     text-align: center;
-    margin-block: 5rem;
+    margin-bottom: 5rem;
+    @media (max-width: 899px) {
+      font-size: 2rem;
+    }
   }
   .voice-cards {
+    display: flex;
+    justify-content:center;
+    gap: 5rem;
+    @media (max-width: 899px) {
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+    }
+    .voice-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 3rem;
+      width: 300px;
+    }
     svg {
-      width: 100px;
-      height: 100px;
+      width: 50px;
+      height: 50px;
       path {
         fill: #333;
       }
