--- a/css/top-page.css
+++ b/css/top-page.css
@@ -341,3 +341,59 @@
     }
   }
 }
+
+.contact {
+  padding-block: 3rem;
+  width: 50%;
+  margin: 0 auto ;
+  @media (max-width: 899px) {
+    width: 90%;
+  }
+  h2{
+    margin-bottom: 2rem;
+    font-size:2.5rem;
+  }
+  p+p{
+    margin-top: 1rem;
+  }
+  .button{
+    margin-top: 2rem;
+    text-align: center;
+
+  }
+  button{
+    background-color: #36b3b0;
+    color: #fff;
+    padding: 0.5rem 5rem;
+    border: 1px solid #36b3b0;
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    &:hover {
+      background-color: #fff;
+      color: #36b3b0;
+      border: 1px solid #36b3b0;
+    }
+    &:active {
+      transform: translate(0, 4px);
+    }
+  }
+  label{
+    display: block;
+  }
+  .is-required::after {
+    content: " *";
+    color: #ff0000;
+    margin-left: 5px;
+  }
+  input,textarea{
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+  }
+}
