--- a/css/header.css
+++ b/css/header.css
@@ -3,9 +3,9 @@
   padding: 0;
   box-sizing: border-box;
   color: #333;
-  font-family: "M PLUS Rounded 1c","Noto Sans JP", "Hiragino Sans", "Hiragino Kaku Gothic ProN",
-    -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Arial,
-    sans-serif;
+  font-family: "M PLUS Rounded 1c", "Noto Sans JP", "Hiragino Sans",
+    "Hiragino Kaku Gothic ProN", -apple-system, BlinkMacSystemFont,
+    "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
 img {
   max-width: 100%;
@@ -46,7 +46,7 @@ img {
     justify-content: space-between;
     align-items: center;
     padding-block: 2rem;
-    @media (max-width: 1024px) {
+    @media (max-width: 1200px) {
       padding-block: 1rem;
       width: 96%;
     }
@@ -67,7 +67,7 @@ img {
       transition: all 0.3s ease;
       position: relative;
       z-index: 10000;
-      @media (min-width: 1025px) {
+      @media (min-width: 1201px) {
         display: none;
       }
       .header__menu-line {
@@ -105,7 +105,7 @@ img {
       background-position: bottom right; /* 下線の初期位置 */
       background-size: 0 1px; /* 下線のサイズ（横幅、高さ） */
       transition: background-size 0.3s;
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         font-size: 1rem;
         gap: 0.5rem;
       }
@@ -115,7 +115,7 @@ img {
       }
       .header__logo-img {
         width: 100px;
-        @media (max-width: 1024px) {
+        @media (max-width: 1200px) {
           width: 50px;
         }
       }
@@ -137,7 +137,7 @@ img {
       }
     }
     .header__nav {
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         position: fixed;
         top: 0;
         right: -100%;
@@ -159,7 +159,7 @@ img {
       align-items: center;
       text-decoration: none;
       font-size: 1.2rem;
-      @media (max-width: 1024px) {
+      @media (max-width: 1200px) {
         flex-direction: column;
       }
 
@@ -172,7 +172,7 @@ img {
       }
       .nav-list__item {
         cursor: pointer;
-        @media (max-width: 1024px) {
+        @media (max-width: 1200px) {
           font-size: 1rem;
         }
         &:nth-child(5) a:hover {
