--- a/css/top-page.css
+++ b/css/top-page.css
@@ -310,7 +310,7 @@
 
 .voice {
   background-color: #f0f2f5;
-  padding: 5rem 1rem;
+  padding: 5rem 3rem;
   h2 {
     font-size: 3rem;
     text-align: center;
@@ -333,7 +333,7 @@
       flex-direction: column;
       align-items: center;
       gap: 3rem;
-      width: 300px;
+      width: min(100%, 600px);
     }
     svg {
       width: 50px;
