--- a/css/top-page.css
+++ b/css/top-page.css
@@ -30,7 +30,7 @@
   background-image: url(../img/hero.webp);
   height: calc(100vh - 137px);
   background-size: cover;
-  margin-top: 137px;
+  /* margin-top: 137px; */
   color: #fff;
   display: flex;
   align-items: center;
@@ -255,6 +255,7 @@
       overflow-x: auto;
       padding: 1rem;
       scroll-behavior: smooth;
+      scrollbar-width: none;  /* for Firefox */
       &::-webkit-scrollbar {
         display: none;
       }
