--- a/css/top-page.css
+++ b/css/top-page.css
@@ -188,8 +188,26 @@
   z-index: 9999;
   .popup-content {
     display: flex;
-    justify-content: center;
-    width: 1000px;
+    max-width: 90vw;
+    max-height: 90vh;
+    background: #fff;
+    @media (max-width: 767px) {
+      flex-direction: column;
+      max-width: 90vw;
+      max-height: 90vh;
+    }
+  }
+  #popupImage {
+    max-width: 60vw;
+    max-height: 90vh;
+    width: auto;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    @media (max-width: 767px) {
+      max-width: 100%;
+      max-height: 60vh;
+    }
   }
   img {
     width: 50%;
@@ -199,29 +217,37 @@
     display: flex;
   }
   .aside {
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 30%;
+    width: min(320px, 30vw);
+    overflow-y: auto;
+    @media (max-width: 767px) {
+      width: 100%;
+      max-height: 30vh;
+    }
+
+    p {
+      color: #666;
+    }
     .aside-logo {
       text-align: center;
       padding: 1rem;
       display: flex;
       justify-content: space-between;
-      margin-left: 1rem;
       p {
         display: flex;
         align-items: center;
         font-size: 1.2rem;
-      }
-      p a {
-        display: inline-flex;
-        align-items: center;
-      }
-      p a svg {
-        width: 24px;
-        height: 24px;
+        a {
+          display: inline-flex;
+          align-items: center;
+          width: 25px;
+          margin-right: 0.5rem;
+          border: 1px solid #555;
+          border-radius: 50%;
+          padding: 0.2rem;
+          img {
+            width: 100%;
+          }
+        }
       }
       .modal__close {
         border: none;
@@ -232,23 +258,31 @@
           height: 16px;
         }
       }
+      svg {
+        width: 24px;
+        height: 24px;
+      }
     }
     .aside-menu {
-      height: 40vh;
+      height: 70vh;
       border-block: 1px solid #ccc;
-      button{
+      padding: 2rem;
+      button {
         background-color: #fff;
         border: none;
         cursor: pointer;
       }
+      p {
+        overflow-wrap: break-word;
+      }
     }
     .aside-date {
       text-align: right;
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: #666;
       padding: 1rem;
       p {
-        text-align: center;
+        text-align: left;
       }
     }
   }
