--- a/css/page/front.css
+++ b/css/page/front.css
@@ -27,7 +27,7 @@
   }
 }
 .hero {
-  background-image: url(../img/hero.webp);
+  background-image: url(../../img/hero.webp);
   height: calc(100vh - 137px);
   background-size: cover;
   /* margin-top: 137px; */
@@ -36,7 +36,7 @@
   align-items: center;
   @media (max-width: 1024px) {
     /* margin-top: 92px; */
-    background-image: url(../img/hero-sp.webp);
+    background-image: url(../../img/hero-sp.webp);
     background-position: center bottom;
   }
   @media (max-width: 899px) {
@@ -436,7 +436,7 @@
 }
 
 .opening-hours {
-  background-image: url(../img/opening-hours.webp);
+  background-image: url(../../img/opening-hours.webp);
   background-size: cover;
   padding-block: 12rem;
   display: flex;
