サービス予約ページタブ追加

--- a/css/base.css
+++ b/css/base.css
@@ -8,6 +8,10 @@
     "Helvetica Neue", "Segoe UI", Arial, sans-serif;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 img {
   max-width: 100%;
   height: auto;
